--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 1.1.3 2010-03-15
+* Revert component sorting behavior that I was trying to make
+the tests run more consistantly on different platforms.
+* Added new test for multiple events in a calendar which caught that break.
+
 === 1.1.2 2010-03-10
 
 * Convert project to newgem to make for easier publishing
