--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 1.1.4 ....
+* Readme fix
+
 === 1.1.3 2010-03-15
 * Revert component sorting behavior that I was trying to make
 the tests run more consistantly on different platforms.
