--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,5 @@
-=== 1.1.4 ....
+=== 1.1.4 2010-04-23
+* Fix for RRULE escaping
 * Fix tests so they run under 1.8.7 in multiple environments
 * Readme fix
 
