--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 1.1.6 2011-03-10
+* Fix todo handling (thanks to Frank Schwarz)
+* clean up a number of warnings during test runs
+
 === 1.1.5 2010-06-21
 * Fix for windows line endings (thanks to Rowan Collins)
 
