--- a/History.txt
+++ b/History.txt
@@ -1,6 +1,8 @@
 === 1.2.1 2012-11-12
  * Adds uid property to alarms to support iCloud - Jeroen Jacobs
  * Fix up testing docs - Eric Carty-Fickes
+ * Fix parsing property params that have : in them - Sean Dague
+ * Clean up warnings in test suite - Sean Dague
 
 === 1.2.0 2012-08-30
 * Fix calendar handling for dates < 1000 - Ryan Ahearn
