--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 1.2.2 2013-02-16
+ * added TZURL property to Timezone component - spacepixels
+ * correct days in RRule ("[TU,WE]" -> "TU,WE") - Christoph Finkensiep
+
 === 1.2.1 2012-11-12
  * Adds uid property to alarms to support iCloud - Jeroen Jacobs
  * Fix up testing docs - Eric Carty-Fickes
