fixed issues based on feedback and added comments to README

--- a/README.rdoc
+++ b/README.rdoc
@@ -215,12 +215,17 @@ Add `$KCODE = 'u'` to make icalender work correctly with Utf8 texts
   # can have multiple calendars.
   cals = Icalendar.parse(cal_file)
   cal = cals.first
-
+  
   # Now you can access the cal object in just the same way I created it
   event = cal.events.first
 
   puts "start date-time: " + event.dtstart
   puts "summary: " + event.summary
+
+  # Some calendars contain non-standard parameters (e.g. Apple iCloud
+  # calendars). You can pass in a `strict` value when creating a new parser.
+  unstrict_parser = Icalendar::Parser.new(cal_file, false)
+  cal = unstrict_parser.parse()
 
 == Finders:
 
