--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 1.3.0
+ * Lenient parsing mode ignores unknown properties - David Grandinetti
+ 
 === 1.2.4 2013-03-26
  * Proxy component values now frozen in Ruby 2.0 (Fixed issue #17)
  * Clean up gemspec for cleaner installing via bundler/git
