--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,7 @@
 === 1.3.0 2013-03-31
  * Lenient parsing mode ignores unknown properties - David Grandinetti
  * VTIMEZONE positive offsets properly have "+" prepended (Fixed issue
-#18) - Benjamin Jørgensen
+#18) - Benjamin Jorgensen (sorry for misspelling your last name)
 
 === 1.2.4 2013-03-26
  * Proxy component values now frozen in Ruby 2.0 (Fixed issue #17)
