--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 1.4.0 2013-05-21
+ * Implement ACKNOWLEDGED property for VALARM - tsuzuki08
+ * Output VERSION property as first line after BEGIN:VCALENDAR
+ * Check for unbounded timezone transitions in tzinfo
+
 === 1.3.0 2013-03-31
  * Lenient parsing mode ignores unknown properties - David Grandinetti
  * VTIMEZONE positive offsets properly have "+" prepended (Fixed issue
