--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 1.5.0 2013-12-06
+ * Support for custom x- properties - Jake Craige
+
 === 1.4.5 2013-11-14
  * Fix Geo accessor methods - bouzuya
  * Add ical_multiline_property :related_to for Alarm
