--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 2.0.0.beta.2 2014-04-11
+ * Add uid & acknowledged fields from valarm extensions
+ * Swallow NoMethodError on non-strict parsers
+ * Expose a parse_property method on Icalendar::Parser
+
 === 2.0.0.beta.1 2014-03-30
  * Rewrite for easier development going forward.
 
