--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 2.0.1 2014-04-27
+ * Re-add support for ruby 1.9.2
+
 === 2.0.0 2014-04-22
  * Add Icalendar.logger class & logging in Parser
  * Support tzinfo ~> 0.3 and ~> 1.1
