--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,9 @@
+=== 2.1.0 2014-06-17
+ * Enable parsing all custom properties, not just X- prefixed ones
+   Requires non-strict parsing
+ * Fixed bugs when using non-MRI ruby interpreters
+ * Fix bug copying OpenStruct-backed value types
+
 === 2.0.1 2014-04-27
  * Re-add support for ruby 1.9.2
 
