--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,10 @@
+=== 2.2.0 2014-09-23
+ * Default to non-strict parsing
+ * Enable sorting events by dtstart - Mark Rickert
+ * Better tolerate malformed lines in parser - Gary Shutler
+ * Deduplicate timezone code - Jan Vlnas
+ * Eliminate warnings - rochefort
+
 === 2.1.2 2014-09-10
  * Fix timezone abbreviation generation - Jan Vlnas
  * Fix timezone repeat rules for end of month
