--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,7 @@
 === 2.2.0 2014-09-23
  * Default to non-strict parsing
  * Enable sorting events by dtstart - Mark Rickert
- * Better tolerate malformed lines in parser - Gary Shutler
+ * Better tolerate malformed lines in parser - Garry Shutler
  * Deduplicate timezone code - Jan Vlnas
  * Eliminate warnings - rochefort
 
