Lock i18n dependency version

--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,6 @@
 === 2.2.2 2014-12-27
  * add a `has_#{component}?` method for testing if component exists - John Hope
+ * add documentation & tests for organizer attribute - Ben Walding
 
 === 2.2.1 2014-12-03
  * Prevent crashes when using ActiveSupport::TimeWithZone in multi-property DateTime fields - Danny (tdg5)
