--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,6 @@
+=== 2.4.0 2015-12-21
+ * Add exrule support to event, todo and journal classes 
+
 === 2.3.0 2015-04-26
  * fix value parameter for properties with multiple values
  * fix error when assigning Icalendar::Values::Array to a component
