--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 2.4.0 2015-07-04
+ * Enable parsing individual ICalendar components - Patrick Schnetger
+ * many bug fixes. Thanks to Quan Sun, Garry Shutler, Ryan Bigg, Patrick Schnetger and others
+ * README/documentation updates. Thanks to JonMidhir and Hendrik Sollich
+
 === 2.3.0 2015-04-26
  * fix value parameter for properties with multiple values
  * fix error when assigning Icalendar::Values::Array to a component
