--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 2.5.2 2018-12-08
+ * Remove usage of the global TimezoneStore instance, in favor of a local variable in the parser
+ * Deprecate TimezoneStore class methods
+
 === 2.5.1 2018-10-30
  * Fix usage without ActiveSupport installed.
 
