--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 2.7.1 2021-03-14
+ * Recover from bad line-wrapping code that splits in the middle of Unicode code points
+ * Add a verbose option to the Parser to quiet some of the chattier log entries
+
 === 2.7.0 2020-09-12
  * Handle custom component names, with and without X- prefix
  * Fix Component lookup to avoid namespace collisions
