--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== Unreleased
+ * Always include the VALUE of Event URLs for improved compatibility - Sean Kelley
+ * Improved parse performance - Thomas Cannon
+ * Add helper methods for other Calendar method verbs
+ 
 === 2.8.0 2022-07-10
  * Fix compatibility with ActiveSupport 7 - Pat Allan
  * Set default action of "DISPLAY" on alarms - Rikson
