--- a/History.txt
+++ b/History.txt
@@ -1,5 +1,8 @@
 === Unreleased
 
+=== 2.10.1 2023-12-01
+ * Parsing now handles VTIMEZONE blocks defined after their TZID is used in events and other components
+
 === 2.10.0 2023-11-01
  * Add changelog metadata to gemspec - Juri Hahn
  * Attempt to rescue timezone info when given a nonstandard tzid with no VTIMEZONE
